--- a/Python Scripts/TUD Library metadata.ipynb
+++ b/Python Scripts/TUD Library metadata.ipynb
@@ -124,6 +124,58 @@
     "for record in client.listRecords(metadataPrefix='oai_dc'):\n",
     "   print(record)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TU Delft Library Metadata 1 Record\n",
+    "\n",
+    "` <record xmlns=\"http://www.openarchives.org/OAI/2.0/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n",
+    "\t<header>\n",
+    "\t<identifier>oai:tudelft.nl:uuid:00036dbe-54d3-432a-a78f-83cd66211b5e</identifier>\n",
+    "\t<datestamp>2017-10-18T22:57:59Z</datestamp>\n",
+    "\t<setSpec>A-set</setSpec>\n",
+    "\t</header>\n",
+    "\n",
+    "\t<metadata>\n",
+    "\t\t<oai_dc:dc xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\" xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/oai_dc/ http://www.openarchives.org/OAI/2.0/oai_dc.xsd\">\n",
+    "\t\t<dc:title>Een exploratief onderzoek naar arbeidsmigranten en veiligheid in drie Europese landen</dc:title><dc:creator>Guldenmund, F.W. (author)\n",
+    "\t\t</dc:creator><dc:creator>Cleal, B. (author)</dc:creator>\n",
+    "\t\t<dc:creator>Mearns, K. (author)</dc:creator>\n",
+    "\t\t<dc:description>Het aantal ongevallen met verzuim van arbeidsmigranten of ‘nieuwkomers’ stijgt de laatste jaren. Onder andere naar aanleiding hiervan is er in opdracht van het Ministerie van Sociale Zaken en Werkgelegenheid een studie uitgevoerd naar de arbeidsveiligheid van deze groep. Drie Europese landen (Denemarken, Verenigd Koninkrijk, Nederland) namen deel aan de studie. Speciale aandacht ging uit naar de relatie tussen veiligheid en de nationaliteit van de migranten. Met behulp van vierenveertig interviews, een vragenlijstonderzoek in elf landen en Deense ongevalsdata wordt een beeld geschetst van de situatie van arbeidsmigranten in de drie landen. Hoewel nog veel materiaal anekdotisch is, kan geconcludeerd worden dat het om een kwetsbare groep gaat. Zo lang veel migranten ongeregistreerd aan het werk gaan in het buitenland, en de nationale ongevallen databases niet uitgebreider en systematischer gecodeerd worden, blijft echter de omvang van het probleem vooralsnog onduidelijk.</dc:description>\n",
+    "\t\t<dc:description>Values and Technology</dc:description>\n",
+    "\t\t<dc:description>Technology, Policy and Management</dc:description>\n",
+    "\t\t<dc:publisher>Nederlandse Vereniging voor Arbeidshygiene</dc:publisher>\n",
+    "\t\t<dc:date>2012-06-01</dc:date>\n",
+    "\t\t<dc:type>journal article</dc:type>\n",
+    "\t\t<dc:type>Text</dc:type>\n",
+    "\t\t<dc:identifier>http://resolver.tudelft.nl/uuid:00036dbe-54d3-432a-a78f-83cd66211b5e</dc:identifier>\n",
+    "\t\t<dc:language>nl</dc:language>\n",
+    "\t\t<dc:relation>Tijdschrift voor Toegepaste Arbowetenschappen, 26 (3/4), 2012--0923-618X</dc:relation>\n",
+    "\t\t<dc:rights>(c) 2012 Auteurs</dc:rights></oai_dc:dc>\n",
+    "\t</metadata>\n",
+    "</record> `"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DC Elements\n",
+    "\n",
+    "- title\n",
+    "- location\n",
+    "- creator\n",
+    "- description\n",
+    "- publisher\n",
+    "- date\n",
+    "- type\n",
+    "- identifier\n",
+    "- language\n",
+    "- relation\n",
+    "- rights"
+   ]
   }
  ],
  "metadata": {
