upd labeled data, add eval data and instruction, upd info on intent mining

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -7,7 +7,19 @@
     "Links to read:\n",
     "- [Word embeddings Wiki](https://en.wikipedia.org/wiki/Word_embedding)\n",
     "- [Gensim Python library](https://en.wikipedia.org/wiki/Gensim)\n",
-    "- [Long-Short term memory (LSTM)](https://www.datacamp.com/community/tutorials/lstm-python-stock-market#lstm)"
+    "- [Long-Short term memory (LSTM)](https://www.datacamp.com/community/tutorials/lstm-python-stock-market#lstm)\n",
+    "\n",
+    "\n",
+    "- [THIS WORK](https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8119461) used CRFs and Bi-LSTM for intent extraction from texts from social media in 2 categories - Cosmetics and Tourism. Look into these algos\n",
+    "    - Citation: \n",
+    "`@INPROCEEDINGS{8119461, \n",
+    "author={T. L. Luong and M. S. Cao and D. T. Le and X. H. Phan}, \n",
+    "booktitle={2017 9th International Conference on Knowledge and Systems Engineering (KSE)}, \n",
+    "title={Intent extraction from social media texts using sequential segmentation and deep learning models}, \n",
+    "year={2017}, \n",
+    "pages={215-220}, \n",
+    "doi={10.1109/KSE.2017.8119461}, \n",
+    "month={Oct},}`"
    ]
   },
   {
