identifying patterns and working on inference rules

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -7,8 +7,7 @@
     "### How do researchers deal with it:\n",
     "- [Word embeddings Wiki](https://en.wikipedia.org/wiki/Word_embedding)\n",
     "- [Gensim Python library](https://en.wikipedia.org/wiki/Gensim)\n",
-    "- [Word embeddings]()\n",
-    "- [Inference Rules]()\n",
+    "- [Inference Rules Wiki](https://en.wikipedia.org/wiki/Rule_of_inference)\n",
     "\n",
     "### LSTM: \n",
     "- [Long-Short term memory (LSTM)](https://www.datacamp.com/community/tutorials/lstm-python-stock-market#lstm)\n",
@@ -50,6 +49,38 @@
     "doi={10.1109/TKDE.2008.206}, \n",
     "ISSN={1041-4347}, \n",
     "month={Aug},}`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference Rules method\n",
+    "\n",
+    "### General Rules\n",
+    "#1 If sentence has no label, proceed with label search.\n",
+    "#2 If no label can be assigned, assign the last applied labeled from a previous sentence\n",
+    "\n",
+    "-----------------------------------\n",
+    "### ALL RULES\n",
+    "- EX <<< `example` || OR `for instance` || `assume` || `suppose` || `imagine` || `as`\n",
+    "- EX <<< `Let's` && try || think || see || pick .. \n",
+    "- CD <<< `Let's` && look at || make || put || do || start || prove || evaluate || back || try || just\n",
+    "- SM <<< `Let's` && summarize\n",
+    "- SM <<< `in other words` && past tense\n",
+    "- SM <<< if (lineNr < 10 `OR` lineNr > fileLinesNr - 10) `&&` (past tense) =>> (within the first or last 10 lines + past tense)\n",
+    "- AP <<< `in other words` && should\n",
+    "- AP <<< `best practice(s)`\n",
+    "- CD <<< `in other words` && present tense\n",
+    "\n",
+    "-----------------------------------\n",
+    "\n",
+    "\n",
+    "#### EXAMPLE Rules\n",
+    "#1 \\begin{equation} d \\leftarrow EX \\space, if\\space (\"let's\" \\in d \\space) \\space \\land (\"try\" \\in d \\space \\lor \"see\" \\in d \\space \\lor \"think\" \\in d \\space \\lor \"pick\" \\in d \\space \\lor \"say\" \\in d) \\end{equation} \n",
+    "\n",
+    "#2 \\begin{equation} d \\leftarrow EX \\space, if\\space (\"example\" \\in d \\space) \\lor (\"for \\space instance\" \\in d) \\space \\lor (\"suppose\" \\in d) \\space \\lor (\"assume\" \\in d) \\space \\lor (\"includes\" \\in d) \\space \\lor (\"imagine\" \\in d) \\space \\end{equation} \n",
+    "\n"
    ]
   },
   {
