--- a/Python Scripts/TUD Library metadata.ipynb
+++ b/Python Scripts/TUD Library metadata.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "sickle = Sickle('http://oai.tudelft.nl/ir')\n",
     "records = sickle.ListRecords( **{'metadataPrefix': 'oai_dc', 'ignore_deleted': 'True'})\n",
     "\n",
-    "oFilePath = r\"C:\\Users\\a.dimitrova\\Desktop\\Course data Thesis\\TUDelftLibMetadataPART.xml\"\n",
+    "oFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\TUDelftLibMetadata60th.xml\"\n",
     "\n",
     "with open(oFilePath, 'w', encoding = \"utf-8\") as oFile:\n",
     "    for i,rec in enumerate(records):\n",
     "        #print(rec.header)\n",
     "        # extract only 1/3rd of the data as the file is too big otherwise (150 mb)\n",
-    "        if i % 3 == 0:\n",
+    "        if i % 60 == 0:\n",
     "            oFile.write(str(rec))"
    ]
   },
