--- a/Python Scripts/Text classification (dummy).ipynb
+++ b/Python Scripts/Text classification (dummy).ipynb
@@ -11,9 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ani\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import model_selection, preprocessing, linear_model, naive_bayes, metrics, svm\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +65,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Train x\n",
+      "6678    self-indulgent\n",
+      "6693     disappointed:\n",
+      "8262               not\n",
+      "2243        amazon.com\n",
+      "9808         horrible,\n",
+      "2295        brilliant,\n",
+      "7555              love\n",
+      "1064                 i\n",
+      "4506        anthology:\n",
+      "4508         cheating:\n",
+      "8358               i'm\n",
+      "6080          helpful:\n",
+      "6459              have\n",
+      "9337             handy\n",
+      "1047               the\n",
+      "1034                 a\n",
+      "2251      interesting,\n",
+      "5859                no\n",
+      "1231              good\n",
+      "4906            better\n",
+      "6115         incorrect\n",
+      "6542          humbug!:\n",
+      "7701     disappointed:\n",
+      "2453            smells\n",
+      "8757           garbage\n",
+      "9235            double\n",
+      "451              great\n",
+      "9615          jennifer\n",
+      "5304            inside\n",
+      "3142               the\n",
+      "             ...      \n",
+      "6409       overpriced:\n",
+      "4320             great\n",
+      "6387                 a\n",
+      "2828              just\n",
+      "1049              love\n",
+      "984              great\n",
+      "3292             great\n",
+      "2064             tapes\n",
+      "1067               the\n",
+      "2946         pre-order\n",
+      "9440               not\n",
+      "3924             great\n",
+      "9830           twisted\n",
+      "413                not\n",
+      "4609             waste\n",
+      "5972       insightful:\n",
+      "1154               the\n",
+      "6358        excellent,\n",
+      "6573                if\n",
+      "4793           slavery\n",
+      "29               based\n",
+      "4410          warnings\n",
+      "7623        finnegan's\n",
+      "1146                be\n",
+      "3188               not\n",
+      "1842                my\n",
+      "4700         purchased\n",
+      "926            arrived\n",
+      "2597              true\n",
+      "6174              life\n",
+      "Name: text, Length: 7500, dtype: object\n",
+      "\n",
+      "\n",
+      "Validation X\n",
+      "5315               too\n",
+      "6707               csi\n",
+      "7611              will\n",
+      "2746              this\n",
+      "6649             ricky\n",
+      "3806    verrrrryyyyyyy\n",
+      "8155              just\n",
+      "3832               mad\n",
+      "592              great\n",
+      "9250            crosby\n",
+      "692               edge\n",
+      "6112               not\n",
+      "7731              it's\n",
+      "246              don't\n",
+      "2717               the\n",
+      "7924             don't\n",
+      "8078             badly\n",
+      "1825              nice\n",
+      "7355              poor\n",
+      "5603                 a\n",
+      "2039            thumbs\n",
+      "7618            please\n",
+      "4784                if\n",
+      "5538            sheets\n",
+      "1175              save\n",
+      "9009            cheap,\n",
+      "60               homer\n",
+      "3067               wow\n",
+      "3135                an\n",
+      "3248            should\n",
+      "             ...      \n",
+      "1170            better\n",
+      "5384                is\n",
+      "8058             great\n",
+      "7391               the\n",
+      "8021          terrible\n",
+      "299              super\n",
+      "9286               was\n",
+      "179                yet\n",
+      "4811         telemann:\n",
+      "9441                it\n",
+      "7958                an\n",
+      "397              long,\n",
+      "640               does\n",
+      "6792                 a\n",
+      "8957            really\n",
+      "5601       interesting\n",
+      "6018             spare\n",
+      "7411               hip\n",
+      "6581              good\n",
+      "7825             don't\n",
+      "802                too\n",
+      "2840                if\n",
+      "4415              love\n",
+      "9394              this\n",
+      "7169                if\n",
+      "4083       misgivings:\n",
+      "1388                 a\n",
+      "2638              best\n",
+      "5854         beautiful\n",
+      "905             pretty\n",
+      "Name: text, Length: 2500, dtype: object\n",
+      "\n",
+      "\n",
+      "Train y\n",
+      "[0 0 0 ... 0 0 1]\n",
+      "\n",
+      "\n",
+      "Validation Y\n",
+      "[0 1 0 ... 1 1 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# split the dataset into training and validation datasets \n",
     "train_x, valid_x, train_y, valid_y = model_selection.train_test_split(trainDF['text'], trainDF['label'])\n",
@@ -86,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
