working on identifying english tenses in sentences

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -133,59 +133,82 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Checking the tense of the verbs in the sentence\n",
     "\n",
-    "- [All POS Tags](http://www.ling.upenn.edu/courses/Fall_2003/ling001/penn_treebank_pos.html)"
+    "- [All POS Tags](http://www.ling.upenn.edu/courses/Fall_2003/ling001/penn_treebank_pos.html)\n",
+    "\n",
+    "NLTK PPOS TAGS for verbs:\n",
+    "\n",
+    "- VBD\t\tverb, past tense\t\t\t\t\t`took`\n",
+    "- VBN\t\tverb, past participle\t\t\t\t`taken`\n",
+    "- VB\t\tverb, base form\t\t\t\t\t\t`take`\n",
+    "- VBG\t\tverb, gerund/present participle\t\t`taking`\n",
+    "- VBP\t\tverb, sing. present, non-3d\t\t\t`take`\n",
+    "- VBZ\t\tverb, 3rd person sing. present\t\t`takes`\n",
+    "\n",
+    "\n",
+    "**Simply counting verbs isn't enough, artificial boost is added if certain types of verbs are present so that they\n",
+    "form a specific English tense. All listed below:**\n",
+    "\n",
+    "- **Past perfect**: `VBD`(had) + `VBN`(been) ------- BUT NO VBG(-ing/gerund)\n",
+    "- **Past continuous tense**: `VBD`(was/were) + `VBG`(-ing/gerund)\n",
+    "- **Past perfect continuous**: `VBD`(had) + `VBN`(been) + `VBG`(-ing/gerund)\n",
+    "- **PRESENT perfect**: `VBP`(have) + `VBN`(been) ------- BUT NO VBG(-ing/gerund)\n",
+    "- **PRESENT perfect continuous**: `VBP`(have) + `VBN`(been) + `VBG`(-ing/gerund)\n",
+    "- **PRESENT continuous**: `VBP`(is/are) + `VBG`(-ing/gerund)\n",
+    "- **Future continuous**: `MD`(WILL) + `VBG`(-ing/gerund)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 229,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verbs: 33.33 %\n",
-      "Past tense over verbs: 33.33 %\n",
-      "Past tense over words: 11.11 %\n"
+      "\n",
+      "Past tense chance: 50.00 %\n"
      ]
     }
    ],
    "source": [
     "import nltk\n",
     "\n",
-    "sentence = \"\"\"so,here's what we've actually shown\"\"\"\n",
-    "\n",
-    "\"\"\"\n",
-    "VBD\t\tverb, past tense\t\t\t\t\ttook\n",
-    "VBN\t\tverb, past participle\t\t\t\ttaken\n",
-    "VB\t\tverb, base form\t\t\t\t\t\ttake\n",
-    "VBG\t\tverb, gerund/present participle\t\ttaking\n",
-    "VBP\t\tverb, sing. present, non-3d\t\t\ttake\n",
-    "VBZ\t\tverb, 3rd person sing. present\t\ttakes\n",
-    "\"\"\"\n",
+    "sentence = \"\"\"I have lived here since 1987.\"\"\"\n",
     "\n",
     "puncDict = [\",\",\".\",\";\",\"-\",\"_\",\"`\",\"'\",\"?\",\"!\",\":\"]\n",
     "\n",
     "def checkPastTense(sentence):\n",
     "    text = nltk.word_tokenize(sentence)\n",
-    "    verbs = 0\n",
-    "    pastTense = 0\n",
+    "    verbs, pastTense, VBGgerund, VBNpp, MDmodalverb, VBDPast = 0, 0, 0, 0, 0, 0    \n",
     "    \n",
     "    textPOS = nltk.pos_tag(text)\n",
     "    for tag in textPOS:\n",
     "        if str(tag[1]).startswith(\"V\"):\n",
+    "#            print(tag)\n",
     "            verbs += 1\n",
-    "            if str(tag[1]) == \"VBD\" or str(tag[1]) == \"VBN\":\n",
+    "            if str(tag[1]) == \"VBD\": \n",
     "                pastTense += 1\n",
+    "                VBDPast += 1\n",
+    "            elif str(tag[1]) == \"VBN\": \n",
+    "                pastTense += 1\n",
+    "                VBNpp += 1\n",
+    "            elif str(tag[1]) == \"VBG\":\n",
+    "                pastTense += 1\n",
+    "                VBGgerund += 1\n",
+    "        \n",
+    "        if str(tag[1]) == \"MD\":\n",
+    "            MDmodalverb += 1\n",
+    "    \n",
+    "    # artifial boost over the past tense verbs +1 if there is at least one from all gerund, past participle \n",
+    "    # and modal verb that defines past continuous tense\n",
+    "    if VBDPast > 0 and VBNpp > 0 and VBGgerund == 0: pastTense += 2                   #Past perfect \n",
+    "    elif VBDPast > 0 and VBNpp == 0 and VBGgerund > 0: pastTense += 2                 #Past continuous tense \n",
+    "    elif VBDPast > 0 and VBNpp > 0 and VBGgerund > 0: pastTense += 3                  #Past perfect continuous\n",
     "    \n",
     "    # big / small = 100 / x\n",
     "    #calculate verbs over words\n",
@@ -200,14 +223,44 @@
     "    ratio_PastVerbsOverWords = len(text) / pastTense\n",
     "    perc_VerbsPastTenseOverWords = 100 / ratio_PastVerbsOverWords\n",
     "    \n",
-    "    return perc_verbs, perc_PastVerbsOverVerbs, perc_VerbsPastTenseOverWords\n",
+    "    if perc_PastVerbsOverVerbs >= 50:\n",
+    "        return perc_PastVerbsOverVerbs\n",
+    "    else:\n",
+    "        return \"NPAST\"\n",
     "\n",
     "\n",
     "# -------------- TO DELETE -----------------\n",
     "#checkPastTense(sentence[0],\",\",sentence[1])\n",
-    "print(\"Verbs: {0:.2f} %\".format(checkPastTense(sentence)[0]))\n",
-    "print(\"Past tense over verbs: {0:.2f} %\".format(checkPastTense(sentence)[1]))\n",
-    "print(\"Past tense over words: {0:.2f} %\".format(checkPastTense(sentence)[2]))"
+    "#print(\"Verbs: {0:.2f} %\".format(checkPastTense(sentence)[0]))\n",
+    "#print(\"Past tense over verbs: {0:.2f} %\".format(checkPastTense(sentence)[1]))\n",
+    "#print(\"Past tense over words: {0:.2f} %\".format(checkPastTense(sentence)[2]))\n",
+    "print(\"\\nPast tense chance: {0:.2f} %\".format(checkPastTense(sentence)))\n",
+    "\n",
+    "#print(checkPastTense(sentence))\n",
+    "\n",
+    "def checkPresentTense(sentence):\n",
+    "    text = nltk.word_tokenize(sentence)\n",
+    "    verbs = 0\n",
+    "    presTense = 0\n",
+    "    \n",
+    "    textPOS = nltk.pos_tag(text)\n",
+    "    for tag in textPOS:\n",
+    "        if str(tag[1]).startswith(\"V\"):\n",
+    "            verbs += 1\n",
+    "            if str(tag[1]) == \"VBD\" or str(tag[1]) == \"VBN\":\n",
+    "                presTense += 1\n",
+    "    \n",
+    "    # big / small = 100 / x\n",
+    "    #calculate verbs over words\n",
+    "    \n",
+    "    #calculate past tense verbs over all verbs\n",
+    "    ratio_PresVerbs = verbs / presTense\n",
+    "    perc_PresVerbsOverVerbs = (100 / ratio_PastVerbs)\n",
+    "    \n",
+    "    if perc_PresVerbsOverVerbs >= 50:\n",
+    "        return perc_PresVerbsOverVerbs\n",
+    "    else:\n",
+    "        return \"NPRES\"\n"
    ]
   },
   {
@@ -350,7 +403,8 @@
     "\n",
     "### --------------------------------------\n",
     "\n",
-    "\n",
+    "def CD_2(sent):\n",
+    "    \n",
     "\n",
     "### --------------------------------------\n",
     "\n",
