--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -141,12 +141,12 @@
     "\n",
     "NLTK PPOS TAGS for verbs:\n",
     "\n",
-    "- VBD\t\tverb, past tense\t\t\t\t\t`took`\n",
-    "- VBN\t\tverb, past participle\t\t\t\t`taken`\n",
-    "- VB\t\tverb, base form\t\t\t\t\t\t`take`\n",
-    "- VBG\t\tverb, gerund/present participle\t\t`taking`\n",
-    "- VBP\t\tverb, sing. present, non-3d\t\t\t`take`\n",
-    "- VBZ\t\tverb, 3rd person sing. present\t\t`takes`\n",
+    "- VBD\t\tverb, past tense\t\t\t\t\t`took`      +1 if checked for PAST, else 0\n",
+    "- VBN\t\tverb, past participle\t\t\t\t`taken`     +1 if checked for PAST, else 0\n",
+    "- VB\t\tverb, base form\t\t\t\t\t\t`take`      +0.5\n",
+    "- VBG\t\tverb, gerund/present participle\t\t`taking`    +0.5\n",
+    "- VBP\t\tverb, sing. present, non-3d\t\t\t`take`      +1 if checked for PRESENT, else 0\n",
+    "- VBZ\t\tverb, 3rd person sing. present\t\t`takes`     +1 if checked for PRESENT, else 0\n",
     "\n",
     "\n",
     "**Simply counting verbs isn't enough, artificial boost is added if certain types of verbs are present so that they\n",
@@ -163,15 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "VBG  0  VBP  1  VBN  0\n",
+      "Past tense chance: 50.00 %\n",
       "\n",
-      "Past tense chance: 50.00 %\n"
+      "VBG  0  VBP  1  VBN  1\n",
+      "Present tense chance: 50.00 %\n"
      ]
     }
    ],
@@ -184,7 +187,7 @@
     "\n",
     "def checkPastTense(sentence):\n",
     "    text = nltk.word_tokenize(sentence)\n",
-    "    verbs, pastTense, VBGgerund, VBNpp, MDmodalverb, VBDPast = 0, 0, 0, 0, 0, 0    \n",
+    "    verbs, pastTense, VBGgerund, VBNpp, VBDPast = 0, 0, 0, 0, 0 \n",
     "    \n",
     "    textPOS = nltk.pos_tag(text)\n",
     "    for tag in textPOS:\n",
@@ -200,16 +203,15 @@
     "            elif str(tag[1]) == \"VBG\":\n",
     "                pastTense += 1\n",
     "                VBGgerund += 1\n",
-    "        \n",
-    "        if str(tag[1]) == \"MD\":\n",
-    "            MDmodalverb += 1\n",
     "    \n",
     "    # artifial boost over the past tense verbs +1 if there is at least one from all gerund, past participle \n",
     "    # and modal verb that defines past continuous tense\n",
+    "    # TODO re-evaluate points\n",
+    "    print(\"VBG \",VBGgerund,\" VBP \",VBNpp,\" VBN \",VBDPast)\n",
     "    if VBDPast > 0 and VBNpp > 0 and VBGgerund == 0: pastTense += 2                   #Past perfect \n",
     "    elif VBDPast > 0 and VBNpp == 0 and VBGgerund > 0: pastTense += 2                 #Past continuous tense \n",
     "    elif VBDPast > 0 and VBNpp > 0 and VBGgerund > 0: pastTense += 3                  #Past perfect continuous\n",
-    "    \n",
+    "    else: pastTense += 0\n",
     "    # big / small = 100 / x\n",
     "    #calculate verbs over words\n",
     "    ratio_verbs = len(text) / verbs\n",
@@ -234,33 +236,44 @@
     "#print(\"Verbs: {0:.2f} %\".format(checkPastTense(sentence)[0]))\n",
     "#print(\"Past tense over verbs: {0:.2f} %\".format(checkPastTense(sentence)[1]))\n",
     "#print(\"Past tense over words: {0:.2f} %\".format(checkPastTense(sentence)[2]))\n",
-    "print(\"\\nPast tense chance: {0:.2f} %\".format(checkPastTense(sentence)))\n",
-    "\n",
-    "#print(checkPastTense(sentence))\n",
+    "print(\"Past tense chance: {0:.2f} %\\n\".format(checkPastTense(sentence)))\n",
     "\n",
     "def checkPresentTense(sentence):\n",
     "    text = nltk.word_tokenize(sentence)\n",
-    "    verbs = 0\n",
-    "    presTense = 0\n",
+    "    verbs, presTense, VBGgerund, VBPhave, VBNbeen = 0, 0, 0, 0, 0  \n",
     "    \n",
     "    textPOS = nltk.pos_tag(text)\n",
     "    for tag in textPOS:\n",
     "        if str(tag[1]).startswith(\"V\"):\n",
     "            verbs += 1\n",
-    "            if str(tag[1]) == \"VBD\" or str(tag[1]) == \"VBN\":\n",
+    "            if str(tag[1]) == \"VBP\": \n",
     "                presTense += 1\n",
-    "    \n",
-    "    # big / small = 100 / x\n",
-    "    #calculate verbs over words\n",
-    "    \n",
+    "                VBPhave += 1\n",
+    "            elif str(tag[1]) == \"VBN\": \n",
+    "                VBNbeen += 1\n",
+    "            elif str(tag[1]) == \"VBG\":\n",
+    "                VBGgerund += 1\n",
+    "                \n",
+    "    # artifial boost over the past tense verbs +1 if there is at least one from all gerund, past participle \n",
+    "    # and modal verb that defines past continuous tense.\n",
+    "    print(\"VBG \",VBGgerund,\" VBP \",VBPhave,\" VBN \",VBNbeen)\n",
+    "    # TODO re-evaluate points\n",
+    "    \"\"\"if VBGgerund == 0 and VBPhave > 0 and VBNbeen > 0: presTense += 1                   #PRESENT perfect\n",
+    "    elif VBGgerund > 0 and VBPhave > 0 and VBNbeen == 0: presTense += 1                 #PRESENT continuous \n",
+    "    elif VBGgerund > 0 and VBPhave > 0 and VBNbeen > 0: presTense += 1                  #PRESENT perfect continuous\n",
+    "    else: presTense += 0\n",
+    "    \"\"\"\n",
     "    #calculate past tense verbs over all verbs\n",
     "    ratio_PresVerbs = verbs / presTense\n",
-    "    perc_PresVerbsOverVerbs = (100 / ratio_PastVerbs)\n",
+    "    perc_PresVerbsOverVerbs = (100 / ratio_PresVerbs)\n",
     "    \n",
     "    if perc_PresVerbsOverVerbs >= 50:\n",
     "        return perc_PresVerbsOverVerbs\n",
     "    else:\n",
-    "        return \"NPRES\"\n"
+    "        return \"NPRES\"\n",
+    "\n",
+    "#print(checkPresentTense(sentence))\n",
+    "print(\"Present tense chance: {0:.2f} %\".format(checkPresentTense(sentence)))"
    ]
   },
   {
